# exam-scan

./: .dockerignore  LICENSE  README.md  docker-compose.yml  exam_scan.code-workspace
.devcontainer/: .env.db  Dockerfile.backend  Dockerfile.frontend  Dockerfile.fullstack  devcontainer.json  docker-compose.yml  (+1 more)
backend/: .env.example  .env.sample  .gitignore  Dockerfile  MIGRATIONS.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requisitos-generales.md  steps.md  test_api.http
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/alembic/: env.py
backend/alembic/versions/: 1f12d83dbed3_initial_models_migration.py  4de3509c4210_update_models_structure.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/routers/: __init__.py  auth.py  exams.py  questions.py  sessions.py  users.py
backend/app/config/: settings.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  auth.py  base.py  exam.py  question.py  session.py  tag.py  user.py
backend/app/monitoring/: prometheus.yml
backend/app/services/: __init__.py  exam_service.py  question_service.py  session_service.py
backend/app/tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_database.py  test_exams.py  test_models.py  test_questions.py  test_sessions.py  test_users.py
backend/scripts/: README.md  docker-init.sh  docker.sh  migrate.sh
(+220 files in other folders)
